syntax = "proto3";

package auth;
option go_package = "../../pkg/pb";

import "register.proto";

message DummyLoginRequest {
    UserType user_type = 1;
}

message DummyLoginResponse {
    string token = 1;
}

